# propy_alamstein

./: .gitignore  .pre-commit-config.yaml  pyproject.toml  small_language_model.py  test_small_language_model.py
.github/workflows/: github-actions-demo.yml  test-workflow.yml
tests/: test_small_language_model.py
